@@ -1,3 +1,7 @@
+Tue Feb 10 17:36:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* node/n-mod-group-by.rb: MergeSortBuffer追加
+
 Tue Feb 10 16:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* node/n-mod-group-by.rb, share/conf.rb, etc/fairy.conf: 
